# nulascript

./: .clang-format  .gitignore  .pre-commit-config.yaml  Bozhilov-DT.docx  Makefile  PROGRESS.md  README.md  example.nula  go.mod  thesis.docx
.github/workflows/: build-repl.yaml  functional-tests.yaml  interpreter-tests.yaml  tests.yaml  unit-tests.yaml
ctests/: CMakeLists.txt
examples/: closures.nula  conditionals.nula  logging.nula  loops.nula
functional/: functional_tests.py  interpreter.py  requirements.txt
language-support/: package.json
language-support/syntaxes/: nulascript.tmLanguage.json
lexer/: lexer.go  lexer_test.go  test_lexer.go
nula/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
nula/syntaxes/: nulascript.tmLanguage.json
nulascript/: final_thesis.docx
nulascript/ast/: ast.cc  ast.h
nulascript/eval/: eval.cc  eval.h
nulascript/interpreter/: interpreter.cc  interpreter.h
nulascript/lexer/: lexer.cc  lexer.h
nulascript/parser/: parser.cc  parser.h
nulascript/repl/: main.cc  repl.cc  repl.h
nulascript/storage/: env.cc  env.h  storage.cc  storage.h
nulascript/tests/: eval_test.cc  example_unittest.cc  lexer_test.cc  parser_test.cc
nulascript/token/: token.cc  token.h
token/: token.go
